src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@fsF-tmF-wfsBN-wmBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nwant maximized: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized-to-edges false\n}"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
